--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@ $(document).ajaxStop(function() {
       "reviewed & tested by the community": {},
     }}),
     colors = {
-      "active critical": '#bfbfbf',
-      "needs work critical": '#bf7c60',
-      "needs review critical": '#bfbf60',
-      "reviewed & tested by the community critical": '#7bbf60',
+      "active critical": '#bbb',
+      "needs work critical": '#cc8766',
+      "needs review critical": '#c1c182',
+      "reviewed & tested by the community critical": '#87cc66',
       "criticals line": '#000',
-      "active": '#bfbfbf',
-      "needs work": '#bf7c60',
-      "needs review": '#bfbf60',
-      "reviewed & tested by the community": '#7bbf60',
+      "active": '#bbb',
+      "needs work": '#cc8766',
+      "needs review": '#c1c182',
+      "reviewed & tested by the community": '#87cc66',
     }
     now = weekOf(Date.now() / 1000),
     start = now;
